--- a/ivew-runner.vcxproj.filters
+++ b/ivew-runner.vcxproj.filters
@@ -103,7 +103,15 @@
     <ClCompile Include="src\ofApp.cpp" />
     <ClCompile Include="src\presentation\AppPresentation.cpp" />
     <ClCompile Include="src\shared\AppGameComponent.cpp" />
-    <ClCompile Include="src\**\*.cpp" />
+    <ClCompile Include="src\layers\image\AppImageLayer.cpp" />
+    <ClCompile Include="src\layers\image\AppImageLayerDefBuilder.cpp" />
+    <ClCompile Include="src\layers\reveal\AppRevealLayer.cpp" />
+    <ClCompile Include="src\layers\reveal\AppRevealLayerDefBuilder.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\ofApp.cpp" />
+    <ClCompile Include="src\presentation\AppPresentation.cpp" />
+    <ClCompile Include="src\presentation\AppPresentationBuilder.cpp" />
+    <ClCompile Include="src\shared\AppGameComponent.cpp" />
     <ClCompile Include="src\**\*.cpp" />
     <ClCompile Include="src\**\*.cpp" />
     <ClCompile Include="src\**\*.cpp" />
@@ -136,6 +144,7 @@
     <ClCompile Include="src\presentation\AppPresentationBuilder.cpp" />
     <ClCompile Include="src\layers\image\AppImageLayerDefBuilder.cpp" />
     <ClCompile Include="src\layers\reveal\AppRevealLayerDefBuilder.cpp" />
+    <ClCompile Include="src\controllers\AppPresentationController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -332,7 +341,16 @@
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="src\presentation\AppPresentation.h" />
     <ClInclude Include="src\shared\AppGameComponent.h" />
-    <ClInclude Include="src\**\*.h" />
+    <ClInclude Include="src\layers\AppLayer.h" />
+    <ClInclude Include="src\layers\image\AppImageLayer.h" />
+    <ClInclude Include="src\layers\image\AppImageLayerDef.h" />
+    <ClInclude Include="src\layers\image\AppImageLayerDefBuilder.h" />
+    <ClInclude Include="src\layers\reveal\AppRevealLayer.h" />
+    <ClInclude Include="src\layers\reveal\AppRevealLayerDef.h" />
+    <ClInclude Include="src\layers\reveal\AppRevealLayerDefBuilder.h" />
+    <ClInclude Include="src\ofApp.h" />
+    <ClInclude Include="src\presentation\AppPresentation.h" />
+    <ClInclude Include="src\shared\AppGameComponent.h" />
     <ClInclude Include="src\**\*.h" />
     <ClInclude Include="src\**\*.h" />
     <ClInclude Include="src\**\*.h" />
@@ -356,6 +374,7 @@
     <ClInclude Include="src\layers\image\AppImageLayerDefBuilder.h" />
     <ClInclude Include="src\layers\reveal\AppRevealLayerDefBuilder.h" />
     <ClInclude Include="src\layers\AppLayer.h" />
+    <ClInclude Include="src\controllers\AppPresentationController.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
